--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
@@ -11,28 +11,59 @@
             android:layout_height="wrap_content"
             android:text="Login to ftp" />
 
-        <Button
-            android:id="@+id/upload"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Upload file to ftp" />
-
-        <Button
-            android:id="@+id/getContent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Get Content" />
-
-	<Button
-	    android:id="@+id/disconnect"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:text="Disconnect from ftp" />
-
 	<Button
 	    android:id="@+id/exit"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
+	    android:layout_alignParentBottom="true"
+	    android:layout_alignParentLeft="true"
 	    android:text="Exit" />
+
 	
-</LinearLayout>
+
+	<EditText
+	    android:id="@+id/etPort"
+	    android:layout_width="34dp"
+	    android:layout_height="wrap_content"
+	    android:layout_alignBaseline="@+id/etIP"
+	    android:layout_alignBottom="@+id/etIP"
+	    android:layout_alignParentRight="true"
+	    android:layout_toRightOf="@+id/etIP"
+	    android:hint="port"
+	    android:ems="10" />
+
+	<EditText
+	    android:id="@+id/etIP"
+	    android:layout_width="242dp"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"
+	    android:layout_below="@+id/login"
+	    android:hint="Ip"
+	    android:ems="10" />
+
+	<EditText
+	    android:id="@+id/etusername"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"
+	    android:layout_below="@+id/etPort"
+	    android:layout_marginTop="24dp"
+	    android:ems="10"
+	    android:hint="username" >
+
+	    <requestFocus />
+	</EditText>
+
+	<EditText
+	    android:id="@+id/etpassword"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"
+	    android:layout_alignParentRight="true"
+	    android:layout_below="@+id/etusername"
+	    android:layout_marginTop="18dp"
+	    android:hint="Password"
+	    android:ems="10"
+	    android:inputType="textPassword" />
+	
+</RelativeLayout>
