--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
 	    android:layout_alignParentRight="true"
 	    android:layout_toRightOf="@+id/etIP"
 	    android:hint="port"
+	    android:text="800"
 	    android:ems="10" />
 
 	<EditText
@@ -39,6 +40,7 @@
 	    android:layout_alignParentLeft="true"
 	    android:layout_below="@+id/login"
 	    android:hint="Ip"
+	    android:text="192.168.1.121"
 	    android:ems="10" />
 
 	<EditText
@@ -49,6 +51,7 @@
 	    android:layout_below="@+id/etPort"
 	    android:layout_marginTop="24dp"
 	    android:ems="10"
+	    android:text="mov"
 	    android:hint="username" >
 
 	    <requestFocus />
@@ -64,6 +67,17 @@
 	    android:layout_marginTop="18dp"
 	    android:hint="Password"
 	    android:ems="10"
+	    android:text="thug"
 	    android:inputType="textPassword" />
+
+	<CheckBox
+	    android:id="@+id/checkBoxsavedata"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"
+	    android:layout_below="@+id/etpassword"
+	    android:text="Save info" />
+
+
 	
 </RelativeLayout>
