--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
 	    android:layout_below="@+id/etPort"
 	    android:layout_marginTop="24dp"
 	    android:ems="10"
-	    android:text="mov"
+	    android:text="bob"
 	    android:hint="username" >
 
 	    <requestFocus />
@@ -67,7 +67,7 @@
 	    android:layout_marginTop="18dp"
 	    android:hint="Password"
 	    android:ems="10"
-	    android:text="thug"
+	    android:text="frank"
 	    android:inputType="textPassword" />
 
 	<CheckBox
