--- a/res/layout/ftp.xml
+++ b/res/layout/ftp.xml
@@ -4,13 +4,6 @@
     android:layout_height="match_parent" >
 
     <Button
-        android:id="@+id/exit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="Exit" />
-
-    <Button
         android:id="@+id/getContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,7 +31,7 @@
         android:id="@+id/contentList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/exit"
+        android:layout_above="@+id/disconnect"
         android:layout_below="@+id/getContent" >
 
     </ListView>
