--- a/res/layout-land/ftp.xml
+++ b/res/layout-land/ftp.xml
@@ -3,38 +3,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-	<Button
-	    android:id="@+id/disconnect"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentLeft="true"
-	    android:layout_below="@+id/getContent"
-	    android:text="Disconnect from ftp" />
+    <Button
+        android:id="@+id/getContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="Get Content" />
 
-	
-	<Button
-	    android:id="@+id/exit"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentBottom="true"
-	    android:layout_alignParentLeft="true"
-	    android:text="Exit" />
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/contentList"
+        android:layout_marginLeft="39dp"
+        android:layout_toRightOf="@+id/getContent"
+        android:text="Upload file to ftp" />
 
-	<Button
-	    android:id="@+id/getContent"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentLeft="true"
-	    android:layout_alignParentTop="true"
-	    android:text="Get Content" />
+    <Button
+        android:id="@+id/disconnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="Disconnect" />
 
-	<Button
-	    android:id="@+id/upload"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentLeft="true"
-	    android:layout_below="@+id/disconnect"
-	    android:text="Upload file to ftp" />
+    <ListView
+        android:id="@+id/contentList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/getContent" >
 
-	
+    </ListView>
+
 </RelativeLayout>
