--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -68,5 +68,12 @@
 	    android:layout_alignParentLeft="true"
 	    android:layout_below="@+id/etpassword"
 	    android:text="Save info" />
+
+	<Spinner
+	    android:id="@+id/connection_protocol"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"
+	    android:layout_below="@+id/checkBoxsavedata" />
 	
 </RelativeLayout>
