--- a/res/layout-land/ftp.xml
+++ b/res/layout-land/ftp.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Get Content" />
+        android:text="@string/get_Content" />
 
     <Button
         android:id="@+id/upload"
@@ -18,7 +18,7 @@
         android:layout_above="@+id/contentList"
         android:layout_marginLeft="39dp"
         android:layout_toRightOf="@+id/getContent"
-        android:text="Upload file to ftp" />
+        android:text="@string/upload" />
 
     <Button
         android:id="@+id/disconnect"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="Disconnect" />
+        android:text="@string/disconnect" />
 
     <ListView
         android:id="@+id/contentList"
