--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -42,8 +42,8 @@
 	    android:layout_below="@+id/etPort"
 	    android:layout_marginTop="24dp"
 	    android:ems="10"
-	    android:text="@string/user"
-	    android:hint="username" >
+	    android:text="bob"
+	    android:hint="@string/user" >
 
 	    <requestFocus />
 	</EditText>
