--- a/res/layout/ftp.xml
+++ b/res/layout/ftp.xml
@@ -29,7 +29,7 @@
 
     <ListView
         android:id="@+id/contentList"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_above="@+id/disconnect"
         android:layout_below="@+id/getContent" >
