--- a/res/layout/ftp.xml
+++ b/res/layout/ftp.xml
@@ -37,15 +37,6 @@
     </ListView>
 
     <TextView
-        android:id="@+id/tvsallowdownload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/getContent"
-        android:text="@string/allowdownload"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
         android:id="@+id/tvallowupload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -55,19 +46,28 @@
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <ImageView
-        android:id="@+id/ivupload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/disconnect"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/red" />
-
-    <ImageView
         android:id="@+id/ivdownload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/contentList"
         android:layout_alignLeft="@+id/ivupload"
-        android:src="@drawable/red" />
+        android:src="@drawable/yellow" />
+
+    <TextView
+        android:id="@+id/tvsallowdownload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tvallowupload"
+        android:layout_alignParentTop="true"
+        android:text="@string/allowdownload"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <ImageView
+        android:id="@+id/ivupload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/upload"
+        android:src="@drawable/yellow" />
 
 </RelativeLayout>
