--- a/res/layout/ftp.xml
+++ b/res/layout/ftp.xml
@@ -12,62 +12,38 @@
         android:text="@string/get_Content" />
 
     <Button
-        android:id="@+id/upload"
+        android:id="@+id/disconnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="@string/upload" />
+        android:text="@string/disconnect" />
 
-    <Button
-        android:id="@+id/disconnect"
+    <TextView
+        android:id="@+id/txtPath"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/disconnect" />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/getContent"
+        android:layout_marginLeft="17dp"
+        android:text="Path /"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/txtPath"
+        android:layout_marginLeft="16dp"
+        android:layout_toRightOf="@+id/getContent"
+        android:text="@string/upload" />
 
     <ListView
         android:id="@+id/contentList"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_above="@+id/disconnect"
-        android:layout_below="@+id/getContent" >
-
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/txtPath" >
     </ListView>
-
-    <TextView
-        android:id="@+id/tvallowupload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/getContent"
-        android:layout_toRightOf="@+id/getContent"
-        android:text="@string/allowupload"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <ImageView
-        android:id="@+id/ivdownload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/contentList"
-        android:layout_alignLeft="@+id/ivupload"
-        android:src="@drawable/yellow" />
-
-    <TextView
-        android:id="@+id/tvsallowdownload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tvallowupload"
-        android:layout_alignParentTop="true"
-        android:text="@string/allowdownload"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <ImageView
-        android:id="@+id/ivupload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/upload"
-        android:src="@drawable/yellow" />
 
 </RelativeLayout>
