--- a/res/layout/item_view.xml
+++ b/res/layout/item_view.xml
@@ -32,44 +32,59 @@
         android:text="Size Shown Here"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        android:id="@+id/menu_btnDownload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/m_download"
-        android:textSize="16sp"
-        android:visibility="gone" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        style="?android:attr/buttonBarStyle"
+        android:weightSum="100">
 
-    <Button
-        android:id="@+id/menu_btnOpen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/menu_btnDownload"
-        android:text="@string/m_open"
-        android:textSize="16sp"
-        android:visibility="gone" />
+        <Button
+            android:id="@+id/menu_btnDownload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/download"
+            android:textSize="16sp"
+            android:layout_weight="20"
+            android:visibility="gone" 
+            style="?android:attr/buttonBarButtonStyle"/>
 
-    <Button
-        android:id="@+id/menu_btnRename"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/menu_btnOpen"
-        android:text="@string/m_rename"
-        android:textSize="16sp"
-        android:visibility="gone" />
+        <Button
+            android:id="@+id/menu_btnOpen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_launcher"
+            android:textSize="16sp" 
+            android:visibility="gone"
+            android:layout_weight="20" 
+            style="?android:attr/buttonBarButtonStyle"/>
 
-    <Button
-        android:id="@+id/menu_btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/m_delete"
-        android:textSize="16sp"
-        android:visibility="gone" />
+        <Button
+            android:id="@+id/menu_btnRename"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_launcher" 
+            android:visibility="gone" 
+            android:layout_weight="20" 
+            style="?android:attr/buttonBarButtonStyle"/>
+
+        <Button
+            android:id="@+id/menu_btnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/delete" 
+            android:visibility="gone" 
+            android:layout_weight="20" 
+            style="?android:attr/buttonBarButtonStyle"/>
+
+        <Button
+            android:id="@+id/menu_btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/cancel" 
+            android:visibility="gone" 
+            android:layout_weight="20" 
+            style="?android:attr/buttonBarButtonStyle"/>
+			
+    </LinearLayout>
 
 </RelativeLayout>
